# AdaptativeTangentCover

./: ATC_Computation.cpp  ATC_Computation.h  CMakeLists.txt  INSTALL.txt  README.md  main.cpp
Results/: circle50Noise4_0.sdp  circleRect_0.sdp
